--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,11 @@ option(BUILD_TESTS "build library unit tests" OFF)
 option(BUILD_EXAMPLES "build library examples" OFF)
 option(BUILD_SHARED "build shared library" OFF)
 option(BUILD_DOCS "build library documentation" OFF)
+option(BUILD_WITH_CUDA "build hermes with gpu enabled" OFF)
 set(INSTALL_PATH ${BUILD_ROOT} CACHE STRING "include and lib folders path")
+# external libs
+set(HERMES_INCLUDE_PATH "" CACHE STRING "hermes include path")
+set(HERMES_LIB_PATH "" CACHE STRING "hermes lib path")
 # cmake modules
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake" ${CMAKE_MODULE_PATH})
 # check for specific machine/compiler options.
@@ -71,7 +75,7 @@ set(CIRCE_HEADERS
         circe/colors/color.h
         circe/colors/color_palette.h
         circe/common/bitmask_operators.h
-#        circe/io/utils.h
+        #        circe/io/utils.h
         circe/scene/array.h
         circe/scene/camera_interface.h
         circe/scene/camera_projection.h
@@ -90,7 +94,7 @@ set(CIRCE_HEADERS
         )
 
 set(CIRCE_SOURCES
-#        circe/io/utils.cpp
+        #        circe/io/utils.cpp
         circe/scene/model.cpp
         circe/scene/shapes.cpp
         circe/ui/trackball_interface.cpp
@@ -109,7 +113,7 @@ set(CIRCE_GL_HEADERS
         circe/gl/scene/scene_mesh.h
         circe/gl/scene/scene_object.h
         circe/gl/scene/triangle_mesh.h
-#        circe/gl/scene/volume_box.h
+        #        circe/gl/scene/volume_box.h
         circe/gl/scene/wireframe_mesh.h
         circe/gl/storage/buffer_interface.h
         circe/gl/storage/device_memory.h
@@ -122,9 +126,9 @@ set(CIRCE_GL_HEADERS
         circe/gl/ui/interactive_object_interface.h
         circe/gl/ui/modifier_cursor.h
         circe/gl/ui/scene_app.h
-#        circe/gl/ui/text_renderer.h
-#        circe/gl/ui/text_object.h
-#        circe/gl/ui/font_manager.h
+        #        circe/gl/ui/text_renderer.h
+        #        circe/gl/ui/text_object.h
+        #        circe/gl/ui/font_manager.h
         circe/gl/scene/mesh_utils.h
         circe/gl/graphics/compute_shader.h
         circe/gl/graphics/ibl.h
@@ -132,16 +136,16 @@ set(CIRCE_GL_HEADERS
         circe/gl/graphics/shader.h
         circe/gl/graphics/shader_manager.h
         circe/gl/graphics/shadow_map.h
-#        circe/gl/helpers/bbox_model.h
-#        circe/gl/helpers/segment_model.h
-#        circe/gl/helpers/bvh_model.h
-#        circe/gl/helpers/camera_model.h
+        #        circe/gl/helpers/bbox_model.h
+        #        circe/gl/helpers/segment_model.h
+        #        circe/gl/helpers/bvh_model.h
+        #        circe/gl/helpers/camera_model.h
         circe/gl/helpers/cartesian_grid.h
-#        circe/gl/helpers/geometry_drawers.h
-#        circe/gl/helpers/grid_model.h
-#        circe/gl/helpers/quad_tree_model.h
-#        circe/gl/helpers/scene_handle.h
-#        circe/gl/helpers/vector_grid.h
+        #        circe/gl/helpers/geometry_drawers.h
+        #        circe/gl/helpers/grid_model.h
+        #        circe/gl/helpers/quad_tree_model.h
+        #        circe/gl/helpers/scene_handle.h
+        #        circe/gl/helpers/vector_grid.h
         # imgui
         circe/gl/imgui/imgui_impl_glfw.h
         circe/gl/imgui/imgui_impl_opengl3.h
@@ -150,7 +154,7 @@ set(CIRCE_GL_HEADERS
         circe/gl/io/framebuffer.h
         circe/gl/io/graphics_display.h
         circe/gl/texture/image_texture.h
-#        circe/gl/io/font_texture.h
+        #        circe/gl/io/font_texture.h
         circe/gl/texture/framebuffer_texture.h
         circe/gl/io/screen_quad.h
         circe/gl/texture/texture.h
@@ -167,10 +171,10 @@ set(CIRCE_GL_SOURCES
         circe/gl/graphics/shader.cpp
         circe/gl/graphics/shader_manager.cpp
         circe/gl/graphics/shadow_map.cpp
-#        circe/gl/helpers/bbox_model.cpp
-#        circe/gl/helpers/segment_model.cpp
+        #        circe/gl/helpers/bbox_model.cpp
+        #        circe/gl/helpers/segment_model.cpp
         circe/gl/helpers/cartesian_grid.cpp
-#        circe/gl/helpers/geometry_drawers.cpp
+        #        circe/gl/helpers/geometry_drawers.cpp
         circe/gl/imgui/imgui_impl_glfw.cpp
         circe/gl/imgui/imgui_impl_opengl3.cpp
         circe/gl/io/buffer.cpp
@@ -180,14 +184,14 @@ set(CIRCE_GL_SOURCES
         circe/gl/io/font_texture.cpp
         circe/gl/io/screen_quad.cpp
         circe/gl/io/viewport_display.cpp
-#        circe/gl/scene/bvh.cpp
+        #        circe/gl/scene/bvh.cpp
         circe/gl/scene/instance_set.cpp
         circe/gl/scene/mesh_utils.cpp
         circe/gl/scene/quad.cpp
         circe/gl/scene/scene_mesh.cpp
         circe/gl/scene/scene_model.cpp
         circe/gl/scene/triangle_mesh.cpp
-#        circe/gl/scene/volume_box.cpp
+        #        circe/gl/scene/volume_box.cpp
         circe/gl/scene/wireframe_mesh.cpp
         circe/gl/storage/buffer_interface.cpp
         circe/gl/storage/device_memory.cpp
@@ -200,9 +204,9 @@ set(CIRCE_GL_SOURCES
         circe/gl/texture/image_texture.cpp
         circe/gl/texture/texture.cpp
         circe/gl/ui/app.cpp
-#        circe/gl/ui/text_renderer.cpp
-#        circe/gl/ui/text_object.cpp
-#        circe/gl/ui/font_manager.cpp
+        #        circe/gl/ui/text_renderer.cpp
+        #        circe/gl/ui/text_object.cpp
+        #        circe/gl/ui/font_manager.cpp
         circe/gl/utils/base_app.cpp
         circe/gl/utils/open_gl.cpp
         )
