--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,6 +120,7 @@ set(CIRCE_GL_HEADERS
         circe/gl/storage/index_buffer.h
         circe/gl/storage/shader_storage_buffer.h
         circe/gl/storage/vertex_array_object.h
+        circe/gl/storage/vertex_attributes.h
         circe/gl/storage/uniform_buffer.h
         circe/gl/storage/vertex_buffer.h
         circe/gl/ui/app.h
@@ -197,6 +198,7 @@ set(CIRCE_GL_SOURCES
         circe/gl/storage/device_memory.cpp
         circe/gl/storage/index_buffer.cpp
         circe/gl/storage/vertex_array_object.cpp
+        circe/gl/storage/vertex_attributes.cpp
         circe/gl/storage/uniform_buffer.cpp
         circe/gl/storage/vertex_buffer.cpp
         circe/gl/storage/shader_storage_buffer.cpp
